tests/baselines/reference/parserArrowFunctionExpression3.errors.txt
tests/cases/conformance/parser/ecmascript5/ArrowFunctionExpressions/parserArrowFunctionExpression3.ts(1,1): error TS2304: Cannot find name 'a'.
tests/cases/conformance/parser/ecmascript5/ArrowFunctionExpressions/parserArrowFunctionExpression3.ts(1,16): error TS1005: ')' expected.
tests/cases/conformance/parser/ecmascript5/ArrowFunctionExpressions/parserArrowFunctionExpression3.ts(1,19): error TS2304: Cannot find name 'a'.
tests/cases/conformance/parser/ecmascript5/ArrowFunctionExpressions/parserArrowFunctionExpression3.ts(1,20): error TS1005: ';' expected.


==== tests/cases/conformance/parser/ecmascript5/ArrowFunctionExpressions/parserArrowFunctionExpression3.ts (4 errors) ====
    a = (() => { } || a)
    ~
!!! error TS2304: Cannot find name 'a'.
                   ~~
!!! error TS1005: ')' expected.
                      ~
!!! error TS2304: Cannot find name 'a'.
                       ~
!!! error TS1005: ';' expected.